Refactor Linear API client and enhance workspace models
- Introduced a new Linear API client structure, including domain models, managers, and utilities for better organization and maintainability.
- Updated workspace-related models to utilize Pydantic v2 for improved data validation and serialization.
- Removed obsolete workspace management tools and replaced them with a more streamlined approach using the new Linear API client.
- Added integration tests for the Linear API client to ensure functionality and model completeness.
- Enhanced documentation for integration tests and updated README files for clarity on setup and usage.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,8 @@ dependencies = [
     "pydantic-settings>=2.0.0",
     "pydantic-ai>=0.0.1",
     "httpx>=0.25.0",
+    "requests>=2.25.0",
     "python-dotenv>=1.0.0",
-    "linear-api>=0.1.0",
     "pyyaml>=6.0.2",
     "anthropic>=0.34.0",
     "tenacity>=8.2.0",
