--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,22 @@
-# API Keys (Required to enable respective provider)
-ANTHROPIC_API_KEY="your_anthropic_api_key_here"       # Required: Format: sk-ant-api03-...
-PERPLEXITY_API_KEY="your_perplexity_api_key_here"     # Optional: Format: pplx-...
-OPENAI_API_KEY="your_openai_api_key_here"             # Optional, for OpenAI models. Format: sk-proj-...
-GOOGLE_API_KEY="your_google_api_key_here"             # Optional, for Google Gemini models.
-MISTRAL_API_KEY="your_mistral_key_here"               # Optional, for Mistral AI models.
-XAI_API_KEY="YOUR_XAI_KEY_HERE"                       # Optional, for xAI AI models.
-GROQ_API_KEY="YOUR_GROQ_KEY_HERE"                     # Optional, for Groq models.
-OPENROUTER_API_KEY="YOUR_OPENROUTER_KEY_HERE"         # Optional, for OpenRouter models.
-AZURE_OPENAI_API_KEY="your_azure_key_here"            # Optional, for Azure OpenAI models (requires endpoint in .taskmaster/config.json).
-OLLAMA_API_KEY="your_ollama_api_key_here"             # Optional: For remote Ollama servers that require authentication.
-GITHUB_API_KEY="your_github_api_key_here"             # Optional: For GitHub import/export features. Format: ghp_... or github_pat_...
+# Alfred Task Manager Configuration
+
+# Server Configuration
+ALFRED_VERSION=0.1.0
+ALFRED_NAME="Alfred Task Manager"
+ALFRED_LOG_LEVEL=INFO
+
+# Workspace
+# ALFRED_WORKSPACE=/path/to/workspace
+
+# API Keys (add your actual keys here)
+ANTHROPIC_API_KEY=your_anthropic_key_here
+
+LINEAR_API_KEY=your_linear_key_here
+LINEAR_TEAM_NAME=your_linear_team_here
+# ALFRED_JIRA_API_KEY=your_jira_key_here
+# ALFRED_JIRA_URL=https://your-domain.atlassian.net
+
+# Transport Configuration
+ALFRED_TRANSPORT=stdio
+# ALFRED_HTTP_HOST=127.0.0.1
+# ALFRED_HTTP_PORT=8000
