Implement Perplexity AI provider and enhance research capabilities
- Added PerplexityProvider class for AI-powered research, integrating with the existing AI service framework.
- Updated configuration files to include new API keys and model options for Perplexity.
- Enhanced research tool to support context gathering from tasks and files, allowing for detailed AI research queries.
- Introduced new models for research context and requests, improving data handling and validation.
- Updated prompts for research queries to ensure clarity and relevance based on project context.
- Refactored existing code to accommodate new research functionalities and improve overall structure.

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
 # Alfred Task Manager Configuration
 
 # Server Configuration
-ALFRED_VERSION=0.1.0
 ALFRED_NAME="Alfred Task Manager"
 ALFRED_LOG_LEVEL=INFO
 
@@ -10,6 +9,20 @@ ALFRED_LOG_LEVEL=INFO
 
 # API Keys (add your actual keys here)
 ANTHROPIC_API_KEY=your_anthropic_key_here
+
+# Perplexity API Configuration (for research features)
+PERPLEXITY_API_KEY=your_perplexity_key_here
+# Perplexity model options:
+#   - sonar-pro (flagship, advanced search, real-time answers) [DEFAULT]
+#   - sonar (standard, fast, factual, efficient)
+#   - sonar-deep-research (in-depth research, extended citations)
+#   - sonar-reasoning (chain-of-thought, strong reasoning)
+#   - sonar-reasoning-pro (enhanced reasoning, more citations)
+PERPLEXITY_MODEL=sonar-pro
+
+# Research-specific provider (uses real-time web search capabilities)
+# Options: perplexity (recommended), anthropic
+RESEARCH_PROVIDER=perplexity
 
 LINEAR_API_KEY=your_linear_key_here
 LINEAR_TEAM_NAME=your_linear_team_here
