Refactor MCP server and tool registration for Alfred Task Manager
- Renamed the MCP server from 'alfred' to 'alfred-task-manager' in configuration files for clarity.
- Introduced a new mcp.py file to encapsulate the MCP instance and its state management.
- Updated server.py to utilize the new MCP instance, removing the previous server creation logic.
- Enhanced tool registration by leveraging decorators for automatic registration, simplifying the process.
- Deleted obsolete plan.md file and various task management tools, streamlining the codebase.
- Improved error handling and logging across the MCP tools for better debugging and user experience.

--- a/.mcp.json.example
+++ b/.mcp.json.example
@@ -1,6 +1,6 @@
 {
   "mcpServers": {
-    "alfred": {
+    "alfred-task-manager": {
       "command": "uv",
       "args": [
         "--directory",
@@ -17,9 +17,9 @@
         "ALFRED_WORKSPACE": "/Users/mohammedfahadkaleem/Documents/Workspace/alfred-task-manager",
         
         "ANTHROPIC_API_KEY": "your_anthropic_api_key_here",
-        "ALFRED_LINEAR_API_KEY": "your_linear_api_key_here",
-        "ALFRED_JIRA_API_KEY": "your_jira_api_key_here",
-        "ALFRED_JIRA_URL": "https://your-domain.atlassian.net"
+        "LINEAR_API_KEY": "your_linear_api_key_here",
+        "JIRA_API_KEY": "your_jira_api_key_here",
+        "JIRA_URL": "https://your-domain.atlassian.net"
       }
     }
   }
